2009-09-15 Karl Lehenbauer <karl@apache.org>
    * rivet/packages/form/form.tcl: If the array containing default values
      for the form is passed in when the form is created
      (for instance: form myform -defaults response -method post),
      make sure form classes public variable "defaults" is set to
      that array name.

2009-09-03 Karl Lehenbauer <karl@apache.org>
    * src/apache-2/rivetCore.c: Add new command, apache_log_error, which
      allows consistent logging to the Apache error log file.

2009-06-24 Karl Lehenbauer <karl@apache.org>
    * acinclude.m4: Include m4/ax_prefix_config_h.m4 to define the
      AX_PREFIX_CONFIG_H macro.

    * tclconfig/libtool.m4, tclconfig/config.guess, tclconfig/config.sub,
      tclconfig/ltmain.sh: Freshened these files with the latest versions
      from libtool.

    * configure.ac, tclconfig/tcl.m4, tclconfig/ChangeLog,
      tclconfig/README.txt, tclconfig/install-sh: Updated to Tcl Extension
      Architecture (TEA) 3.7.

2009-05-05 Karl Lehenbauer <karl@apache.org>
    * src/apache-2/mod_rivet.c: When Rivet is shutting down and per-vhost
      separate virtual interpreters were in use, the shutdown code deleted
      the master interpreter and all of the slave interpreters using
      Tcl_DepeteInterp().  This was an error as it should only delete the
      mater interpreter, as deleting the master interpreter causes its
      slaves to be deleted. It now does this.  (Had it checked using
      Tcl_InterpDeleted to see if the interpreter was already marked as
      deleted, it probably would have been OK.)

    * src/rivetChannel.c - update Tcl channel handler to channel version 4.

2009-05-05 Karl Lehenbauer <karl@apache.org>
    * Add new Rivet Tcl command,apache_table, which can query, get and set
      values in the Apache "notes", "headers_in", "headers_out",
      "err_headers_out" and "subprocess_env" tables.

    * Add new "upload" option "tempname" that'll return the name of the